--- a/vision/index.html
+++ b/vision/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <meta charset="utf-8" />
-</head>
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  
 
-<body>
-  <script src="mover.js"></script>
-  <script src="sketch.js"></script>
-</body>
-
-</html>
+</body></html>
