--- a/ventana/index.html
+++ b/ventana/index.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en"><head>
+      <script>
+    window.onorientationchange = function() { 
+        var orientation = window.orientation; 
+            switch(orientation) { 
+                case 0:
+                case 90:
+                case -90: window.location.reload(); 
+                break; } 
+    };
+</script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <meta charset="utf-8" />
-</head>
-
-<body>
-    <script src="LSystem.js"></script>
-    <script src="Rule.js"></script>
-    <script src="Turtle.js"></script>
+  </head>
+  <body>
     <script src="sketch.js"></script>
-</body>
+  
 
-</html>
+</body></html>
